<resources>
    <string name="app_name">Spanish Vocab Quiz</string>
    <string name="title">Spanish Quiz</string>
    <string name="food_vocabulary">Food Vocabulary</string>
    <string name="answer_true">True</string>
    <string name="answer_false">False</string>
    <string name="food_question_one">Select the correct spelling for the beans</string>
    <string name="food_question_two">Check all the vegatables</string>
    <string name="food_question_three">Translate bread</string>
    <string name="food_question_four">What does arroz mean?</string>
    <string name="food_question_five">Check all the desserts</string>
    <string name="food_question_six">Translate cake</string>
    <string name="food_question_seven">True or False: Tocino es una fruta</string>
    <string name="food_question_eight">Check all the types of meat</string>
    <string name="food_question_nine">Translate vegatables</string>
    <string name="food_question_ten">Select the word that means the onion</string>
    <string name="friholes">los friholes</string>
    <string name="beans_es">los frijoles</string>
    <string name="frejules">las frejules</string>
    <string name="freholes">los freholes</string>
    <string name="mushrooms_es">los champi\u00F1ones</string>
    <string name="cars_es">los carros</string>
    <string name="green_beans_es">las judías verdes</string>
    <string name="pancakes_es">los pancakes</string>
    <string name="corn">corn</string>
    <string name="carrots">carrots</string>
    <string name="onions">onions</string>
    <string name="rice">rice</string>
    <string name="veggies_es">las verduras</string>
    <string name="flan_es">el flan</string>
    <string name="ice_cream_es">el helado</string>
    <string name="chicken_es">el pollo</string>
    <string name="bread_es">el pan</string>
    <string name="fish_es">el pescado</string>
    <string name="onion_es">la cebolla</string>
    <string name="submit_button">Submit</string>
    <string name="el_pan">el pan</string>
    <string name="pan">pan</string>
    <string name="el_pastel">el pastel</string>
    <string name="pastel_es">pastel</string>
    <string name="las_verduras">las verduras</string>
    <string name="verduras">verduras</string>
    <string name="congrats">Congratulations!</string>
    <string name="all_correct">You got 10/10 correct</string>
    <string name="you_got">You got\u0020</string>
    <string name="blank_correct">/10 correct</string>
    <string name="hint_vegetables">correctly translate vegetables</string>
    <string name="hint_cake">correctly translate cake</string>
    <string name="hint_bread">correctly translate bread</string>
</resources>
